# Copyright 2019 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/dart/dart_library.gni")
import("//topaz/runtime/dart/flutter_test.gni")

dart_library("fuchsia_webview_flutter") {
  package_name = "fuchsia_webview_flutter"

  sdk_category = "partner"

  sources = [
    "src/fuchsia_web_services.dart",
    "src/fuchsia_webview.dart",
    "src/fuchsia_webview_platform_controller.dart",
    "webview.dart",
  ]

  deps = [
    "//sdk/fidl/fuchsia.sys",
    "//sdk/fidl/fuchsia.ui.views",
    "//sdk/fidl/fuchsia.web",
    "//third_party/dart-pkg/pub/webview_flutter",
    "//topaz/public/dart/fuchsia_logger",
    "//topaz/public/dart/fuchsia_scenic",
    "//topaz/public/dart/fuchsia_scenic_flutter",
    "//zircon/public/fidl/fuchsia-io",
    "//zircon/public/fidl/fuchsia-mem",
  ]
}

# fx run-host-tests fuchsia_webview_flutter_unittests
flutter_test("fuchsia_webview_flutter_unittests") {
  sources = [
    "fuchsia_webview_test.dart",
  ]

  deps = [
    ":fuchsia_webview_flutter",
    "//third_party/dart-pkg/pub/mockito",
    "//third_party/dart-pkg/pub/test",
    "//topaz/public/dart/fuchsia_webview_flutter",
    "//topaz/public/lib/testing/flutter",
  ]
}
