# Copyright 2018 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/dart/dart_tool.gni")
import("//build/host.gni")

copy("kernel_platform_files") {
  # TODO(kaushikiska): Currently flutter bundles variants of patched SDK for release
  # profile and debug for JIT and AOT. We only need one copy of these per target_arch.
  sources = [
    "//prebuilt/third_party/flutter/$target_cpu/release/aot/flutter_runner_patched_sdk/platform_strong.dill",
    "//prebuilt/third_party/flutter/$target_cpu/release/aot/flutter_runner_patched_sdk/platform_strong.dill.d",
    "//prebuilt/third_party/flutter/$target_cpu/release/aot/flutter_runner_patched_sdk/vm_outline_strong.dill",
  ]
  outputs = [
    "$root_out_dir/flutter_runner_patched_sdk/{{source_file_part}}",
  ]
}
