# Copyright 2019 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/dart/test.gni")
import("//build/testing/environments.gni")

dart_test("ermine_session_shell_e2e_test") {
  sources = [
    "ermine_session_shell_test.dart",
  ]

  deps = [
    "//sdk/testing/sl4f/client",
    "//third_party/dart-pkg/pub/test",
  ]

  args = []

  if (is_debug) {
    args += [ "--debug" ]
  }
}

group("test") {
  testonly = true

  deps = [
    ":ermine_session_shell_e2e_test($host_toolchain)",
  ]
}
