# Copyright 2020 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//topaz/runtime/dart_runner/dart_app.gni")

dart_app("bin") {
  main_dart = "lib/main.dart"

  fuchsia_package_name = "inspect_dart_codelab_fizzbuzz"
  package_name = "inspect_dart_codelab_fizzbuzz"

  meta = [
    {
      path = rebase_path("meta/inspect_dart_codelab_fizzbuzz.cmx")
      dest = "inspect_dart_codelab_fizzbuzz.cmx"
    },
  ]

  sources = []
  deps = [
    "//src/diagnostics/examples/inspect/fidl:fuchsia.examples.inspect",
    "//topaz/public/dart/fidl",
    "//topaz/public/dart/fuchsia_inspect",
    "//topaz/public/dart/fuchsia_logger",
    "//topaz/public/dart/fuchsia_services",
  ]
}
