# Copyright 2020 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/dart/test.gni")
import("//topaz/runtime/dart/dart_fuchsia_test.gni")
import("//topaz/runtime/dart_runner/dart_app.gni")

dart_library("lib") {
  package_name = "inspect_dart_codelab_part_4_lib"

  source_dir = "lib/src"

  sources = [ "reverser.dart" ]

  deps = [
    "//src/diagnostics/examples/inspect/fidl:fuchsia.examples.inspect",
    "//topaz/public/dart/fuchsia_inspect",
  ]
}

dart_app("bin") {
  main_dart = "lib/main.dart"

  fuchsia_package_name = "inspect_dart_codelab_part_4"
  package_name = "inspect_dart_codelab_part_4"

  meta = [
    {
      path = rebase_path("meta/inspect_dart_codelab_part_4.cmx")
      dest = "inspect_dart_codelab_part_4.cmx"
    },
  ]

  deps = [
    ":lib",
    "//sdk/fidl/fuchsia.sys",
    "//src/diagnostics/examples/inspect/fidl:fuchsia.examples.inspect",
    "//topaz/public/dart/fidl",
    "//topaz/public/dart/fuchsia_inspect",
    "//topaz/public/dart/fuchsia_logger",
    "//topaz/public/dart/fuchsia_services",
  ]
}

dart_test("inspect_dart_codelab_part_4_unittests") {
  sources = [ "reverser_test.dart" ]

  deps = [
    ":lib",
    "//third_party/dart-pkg/pub/test",
    "//topaz/public/dart/fuchsia_inspect",
  ]
}

dart_fuchsia_test("inspect_dart_codelab_part_4_integration_tests") {
  sources = [ "integration_test.dart" ]

  meta = [
    {
      path =
          rebase_path("meta/inspect_dart_codelab_part_4_integration_tests.cmx")
      dest = "inspect_dart_codelab_part_4_integration_tests.cmx"
    },
  ]

  deps = [
    ":lib",
    "//third_party/dart-pkg/pub/test",
    "//topaz/public/dart/fuchsia_inspect/codelab/shared",
  ]
}
