# Copyright 2020 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/dart/dart_library.gni")

dart_library("shared") {
  package_name = "inspect_codelab_shared"

  sources = [ "codelab_environment.dart" ]

  deps = [
    "//sdk/fidl/fuchsia.sys",
    "//src/diagnostics/examples/inspect/fidl:fuchsia.examples.inspect",
    "//third_party/dart-pkg/pub/uuid",
    "//topaz/public/dart/fidl",
    "//topaz/public/dart/fuchsia_services",
  ]
}
