#Copyright 2018 The Fuchsia Authors.All rights reserved.
#Use of this source code is governed by a BSD - style license that can be
#found in the LICENSE file.

import("//build/test/test_package.gni")
import("//build/testing/environments.gni")
import("//topaz/runtime/dart_runner/dart_app.gni")

dart_app("dart_inspect_validator_puppet") {
  components = [
    {
      component_name = "dart_inspect_validator_puppet"
      component_type = "dart"
      package_root = "dart_inspect_validator_puppet"
      main_dart = "lib/main.dart"
      sources = []
      deps = [
        "//sdk/fidl/fuchsia.sys",
        "//src/diagnostics/inspect_validator/fidl:validate",
        "//topaz/public/dart/fidl",
        "//topaz/public/dart/fuchsia_inspect",
        "//topaz/public/dart/fuchsia_logger",
        "//topaz/public/dart/fuchsia_services",
      ]
    },
  ]

  meta = [
    {
      path = rebase_path("meta/dart_inspect_validator_puppet.cmx")
      dest = "dart_inspect_validator_puppet.cmx"
    },
  ]
}

test_package("inspect_validator_test_dart") {
  public_deps = [
    ":dart_inspect_validator_puppet",
    "//src/diagnostics/inspect_validator:validator_bin",
  ]

  meta = [
    {
      path = rebase_path("meta/inspect_validator_test_dart.cmx")
      dest = "inspect_validator_test_dart.cmx"
    },
  ]

  tests = [
    {
      name = "validator"
      environments = basic_envs
    },
  ]
}

group("tests") {
  testonly = true
  deps = [
    ":dart_inspect_validator_puppet",
    ":inspect_validator_test_dart",
  ]
}
